# rust-dbus-comparisons

./: Cargo.toml  LICENSE  Readme.md
benches/: marshal_bench.rs
src/: bench_async_rustbus.rs  bench_dbus_bytestream.rs  bench_dbus_message_parser.rs  bench_dbus_native.rs  bench_dbus_pure.rs  bench_dbusrs.rs  bench_rustbus.rs  bench_zvariant.rs  lib.rs
tools/: make_table.py
