[package]
name = "dbus_benches"
version = "0.1.0"
authors = ["Moritz Borcherding <moritz.borcherding@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustbus = "0.4.0"
dbus = "0.8.1"

dbus-bytestream = "0.1.4"
dbus-serialize = "0.1.2"

zvariant = { git = "https://gitlab.freedesktop.org/zeenix/zbus", version = "2" }
zvariant_derive = { git = "https://gitlab.freedesktop.org/zeenix/zbus", version = "2" }
serde = { version = "1.0", features = [ "derive" ] }
zbus = {git = "https://gitlab.freedesktop.org/zeenix/zbus", version = "1.0"}

dbus-pure = {git = "https://github.com/Arnavion/dbus-pure", version = "0.1.0"}

dbus-message-parser = "1.0"
bytes = "0.5.3"

dbus-native = {git = "https://github.com/diwic/dbus-rs"}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "marshal_bench"
harness = false
