[package]
name = "dbus_benches"
version = "0.1.0"
authors = ["Moritz Borcherding <moritz.borcherding@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
async-rustbus = "0.1.1"
rustbus = "0.17.0"
dbus = "0.9.3"

dbus-bytestream = "0.1.4"
dbus-serialize = "0.1.2"

serde = "1.0.0"
zvariant = "2.7.0"
zvariant_derive = "2.7.0"
zbus = "1.9.1"

dbus-pure = {git = "https://github.com/Arnavion/dbus-pure", revision = "830b63808ef9139f78b5dd098969e0995573afef"}

dbus-message-parser = "4.1.0"
bytes = "1.0.1"

dbus-native = {git = "https://github.com/diwic/dbus-rs", revision = "0d61670d3e9aa41d855825f8c26244fe1f6a2a2c"}

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "marshal_bench"
harness = false
