[package]
name = "dbus_benches"
version = "0.1.0"
authors = ["Moritz Borcherding <moritz.borcherding@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
async-rustbus = "0.1.2"
rustbus = "0.19.1"
dbus = "0.9.6"

dbus-bytestream = "0.1.4"
dbus-serialize = "0.1.2"

serde = "1.0.0"
zvariant = "3.8.0"
zvariant_derive = "3.8.0"
zbus = "3.5.0"

dbus-pure = {git = "https://github.com/Arnavion/dbus-pure", rev = "cd238a268095e560801048332d82c5ec208f4e44"}

dbus-message-parser = "4.3.1"
bytes = "1.1.0"

dbus-native = {git = "https://github.com/diwic/dbus-rs", rev = "2c29b4393f2073a019f2c9a2a96b140dd3ceb6ba"}

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "marshal_bench"
harness = false
